--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ compiler:
 
 env:
     global:
-        - MONGO_REPO="[ arch=amd64 ] http://repo.mongodb.com/apt/ubuntu"
+        - MONGO_REPO="[ arch=s390x ] http://repo.mongodb.com/apt/ubuntu"
         - REPO_TYPE="trusty/mongodb-enterprise/3.4 multiverse"
         - SOURCES_LOC="/etc/apt/sources.list.d/mongodb-enterprise.list"
         - KEY_SERVER="hkp://keyserver.ubuntu.com:80"
